finished registering process

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -12,9 +13,10 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600&display=swap&subset=latin-ext" rel="stylesheet">
     <link href="static/css/bootstrap.css" rel="stylesheet">
     <link href="static/css/fontawesome-all.css" rel="stylesheet">
-  	<link href="static/css/styles.css" rel="stylesheet">
+    <link href="static/css/styles.css" rel="stylesheet">
 
 </head>
+
 <body data-spy="scroll" data-target=".fixed-top">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-md navbar-dark navbar-custom fixed-top">
@@ -32,7 +34,8 @@
                 </li>
             </ul>
         </div>
-    </nav> <!-- end of navbar -->
+    </nav>
+    <!-- end of navbar -->
     <!-- end of navbar -->
 
     <!-- Header -->
@@ -45,19 +48,28 @@
                             <h1>GROUP PROJECT 362</h1>
                             <p class="p-heading p-large">For new users - Register an account to use this app</p>
                             <p class="p-heading p-large">For existing users - Sign on</p>
-                            <a class="btn-solid-lg page-scroll" href="#intro">REGISTER</a>
+                            <a class="btn-solid-lg page-scroll" href="/register">REGISTER</a>
                             <a class="btn-solid-lg page-scroll" href="#intro">SIGN ON</a>
                         </div>
-                    </div> <!-- end of col -->
-                </div> <!-- end of row -->
-            </div> <!-- end of container -->
-        </div> <!-- end of header-content -->
-    </header> <!-- end of header -->
+                    </div>
+                    <!-- end of col -->
+                </div>
+                <!-- end of row -->
+            </div>
+            <!-- end of container -->
+        </div>
+        <!-- end of header-content -->
+    </header>
+    <!-- end of header -->
     <!-- end of header -->
 
     <!-- Scripts -->
-    <script src="static/js/jquery.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
-    <script src="static/js/popper.min.js"></script> <!-- Popper tooltip library for Bootstrap -->
-    <script src="static/js/bootstrap.min.js"></script> <!-- Bootstrap framework -->
+    <script src="static/js/jquery.min.js"></script>
+    <!-- jQuery for Bootstrap's JavaScript plugins -->
+    <script src="static/js/popper.min.js"></script>
+    <!-- Popper tooltip library for Bootstrap -->
+    <script src="static/js/bootstrap.min.js"></script>
+    <!-- Bootstrap framework -->
 </body>
+
 </html>
