--- a/templates/home.html
+++ b/templates/home.html
@@ -34,7 +34,7 @@
             <h1>GROUP PROJECT 362</h1>
             <p class="p-heading p-large">For new users - Register an account to use this app</p>
             <p class="p-heading p-large">For existing users - Sign on</p>
-            <a class="btn-solid-lg page-scroll" href="#intro">REGISTER</a>
+            <a class="btn-solid-lg page-scroll" href="/register">REGISTER</a>
             <a class="btn-solid-lg page-scroll" href="#intro">SIGN ON</a>
           </div>
         </div> <!-- end of col -->
