--- a/templates/register.html
+++ b/templates/register.html
@@ -1,88 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+{% block head %}
+<title>Register</title>
+{% endblock %}
 
-    <!-- Website Title -->
-    <title>Group Project 362</title>
 
-    <!-- Styles -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap&subset=latin-ext" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600&display=swap&subset=latin-ext" rel="stylesheet">
-    <link href="static/css/bootstrap.css" rel="stylesheet">
-    <link href="static/css/fontawesome-all.css" rel="stylesheet">
-    <link href="static/css/styles.css" rel="stylesheet">
+{% block body %}
 
-</head>
+<br>
+<!-- Header -->
+<header id="header" class="header">
+  <div class="header-content">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="text-container">
+            <h1>Create an account</h1>
+            {% from '_formhelpers.html' import render_field %}
+            <form action="/register" method="POST">
+              <dl>
+                {{render_field(form.fname)}}
+                {{render_field(form.lname)}}
+                {{render_field(form.email)}}
+                {{render_field(form.username)}}
+                {{render_field(form.password)}}
+                {{render_field(form.confirm)}}
+              </dl>
+              <br>
+              <p><input type="submit" value="Register"></p>
+            </form>
+          </div>
+        </div> <!-- end of col -->
+      </div> <!-- end of row -->
+    </div> <!-- end of container -->
+  </div> <!-- end of header-content -->
+</header> <!-- end of header -->
 
-<body data-spy="scroll" data-target=".fixed-top">
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-md navbar-dark navbar-custom fixed-top">
-        <div class="collapse navbar-collapse">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#header">HOME <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#callMe">ABOUT US</a>
-                </li>
+{% if error %}
+  <p class="error"><strong>Error:</strong>{{ error }}</p>
+{% endif %}
 
-                <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#contact">CONTACT US</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <!-- end of navbar -->
-    <!-- end of navbar -->
-
-    <!-- Header -->
-    <header id="header" class="header">
-        <div class="header-content">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="text-container">
-                            <h1>GROUP PROJECT 362</h1>
-                            <p class="p-heading p-large">Register an account here</p>
-                            <form action="{{ url_for('register') }}" method="POST">
-                                <div class="p-heading p-large">{{ error_msg }}</div>
-                                <input id="firstname" name="firstname" type="text" placeholder="Enter Your Firstname" /></br>
-                                </br>
-                                <input id="lastname" name="lastname" type="text" placeholder="Enter Your Lastname" /></br>
-                                </br>
-                                <input id="username" name="username" type="text" placeholder="Enter Your Username" /></br>
-                                </br>
-                                <input id="password" name="password" type="password" placeholder="Enter Your Password" /></br>
-                                </br>
-                                <input id="email" name="email" type="text" placeholder="Enter Your Email" /></br>
-                                </br>
-                                <input type="submit" class="button" value="Sign Up"></br>
-                            </form>
-                            </br>
-                            <a class="btn-solid-lg page-scroll" href="#intro">ALREADY REGISTERED?</a>
-                        </div>
-                    </div>
-                    <!-- end of col -->
-                </div>
-                <!-- end of row -->
-            </div>
-            <!-- end of container -->
-        </div>
-        <!-- end of header-content -->
-    </header>
-    <!-- end of header -->
-    <!-- end of header -->
-
-    <!-- Scripts -->
-    <script src="static/js/jquery.min.js"></script>
-    <!-- jQuery for Bootstrap's JavaScript plugins -->
-    <script src="static/js/popper.min.js"></script>
-    <!-- Popper tooltip library for Bootstrap -->
-    <script src="static/js/bootstrap.min.js"></script>
-    <!-- Bootstrap framework -->
-</body>
-
-</html>
+{% endblock %}
