--- a/templates/home.html
+++ b/templates/home.html
@@ -35,7 +35,7 @@
             <p class="p-heading p-large">For new users - Register an account to use this app</p>
             <p class="p-heading p-large">For existing users - Sign on</p>
             <a class="btn-solid-lg page-scroll" href="/register">REGISTER</a>
-            <a class="btn-solid-lg page-scroll" href="#intro">SIGN ON</a>
+            <a class="btn-solid-lg page-scroll" href="/login">SIGN ON</a>
           </div>
         </div> <!-- end of col -->
       </div> <!-- end of row -->
