--- a/templates/login.html
+++ b/templates/login.html
@@ -1,36 +1,57 @@
 {% extends 'base.html' %}
 
 {% block head %}
+<link rel="stylesheet" href="static/css/login.css">
 <title>Log-in</title>
 {% endblock %}
 
 {% block body %}
 <!-- Header -->
 <header id="header" class="header">
-<div class="header-content">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-8 offset-md-2">
-        <div class="text-container">
-          <main class="form-signin">
-            <form>
-              <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
-              <!-- <div class="w-100 p-3"> -->
-                <label for="username" class="text-white">Username</label>
-                <input type="text" id="username" class="form-control" placeholder="Username" required autofocus>
-              <!-- </div> -->
-              <!-- <div class="w-100 p-3"> -->
-                <label for="password" class="text-white">Password</label>
-                <input type="password" id="password" class="form-control" placeholder="Password" required>
-              <!-- </div> -->
-              <br>
-              <button class="btn btn-lg btn-primary" type="submit">Sign in</button>
-            </form>
-          </main>
-        </div>
-      </div> <!-- end of col -->
-    </div> <!-- end of row -->
-  </div> <!-- end of container -->
-</div> <!-- end of header-content -->
+  <div class="header-content">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="container">
+            <div class="d-flex justify-content-center h-100">
+              <div class="card">
+                <div class="card-header">
+                  <h3>Sign In</h3>
+                </div>
+                <div class="card-body">
+                  <form>
+                    <div class="input-group form-group">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text"><i class="fas fa-user"></i></span>
+                      </div>
+                      <input type="text" class="form-control" placeholder="username">
+
+                    </div>
+                    <div class="input-group form-group">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text"><i class="fas fa-key"></i></span>
+                      </div>
+                      <input type="password" class="form-control" placeholder="password">
+                    </div>
+                    <div class="form-group">
+                      <input type="submit" value="Login" class="btn float-right login_btn">
+                    </div>
+                  </form>
+                </div>
+                <div class="card-footer">
+                  <div class="d-flex justify-content-center links">
+                    Don't have an account?<a href="/register">Sign Up</a>
+                  </div>
+                  <div class="d-flex justify-content-center">
+                    <a href="#">Forgot your password?</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div> <!-- end of col -->
+      </div> <!-- end of row -->
+    </div> <!-- end of container -->
+  </div> <!-- end of header-content -->
 </header> <!-- end of header -->
 {% endblock %}
