--- a/templates/login.html
+++ b/templates/login.html
@@ -19,19 +19,19 @@
                   <h3>Sign In</h3>
                 </div>
                 <div class="card-body">
-                  <form>
+                  <form autocomplete="off">
                     <div class="input-group form-group">
                       <div class="input-group-prepend">
                         <span class="input-group-text"><i class="fas fa-user"></i></span>
                       </div>
-                      <input type="text" class="form-control" placeholder="username">
+                      <input name="username" type="text" class="form-control" placeholder="Username">
 
                     </div>
                     <div class="input-group form-group">
                       <div class="input-group-prepend">
                         <span class="input-group-text"><i class="fas fa-key"></i></span>
                       </div>
-                      <input type="password" class="form-control" placeholder="password">
+                      <input name="password" type="password" class="form-control" placeholder="Password">
                     </div>
                     <div class="form-group">
                       <input type="submit" value="Login" class="btn float-right login_btn">
