Deleted thwart for simplicity + added more stuff in login function and login.html

--- a/templates/login.html
+++ b/templates/login.html
@@ -19,24 +19,26 @@
                   <h3>Sign In</h3>
                 </div>
                 <div class="card-body">
-                  <form autocomplete="off">
+                  <form autocomplete="off" action='/login' method='POST'>
                     <div class="input-group form-group">
                       <div class="input-group-prepend">
                         <span class="input-group-text"><i class="fas fa-user"></i></span>
                       </div>
-                      <input name="username" type="text" class="form-control" placeholder="Username">
-
+                      <input id="username" name="username" type="text" class="form-control" placeholder="Username">
                     </div>
                     <div class="input-group form-group">
                       <div class="input-group-prepend">
                         <span class="input-group-text"><i class="fas fa-key"></i></span>
                       </div>
-                      <input name="password" type="password" class="form-control" placeholder="Password">
+                      <input id="password" name="password" type="password" class="form-control" placeholder="Password">
                     </div>
                     <div class="form-group">
                       <input type="submit" value="Login" class="btn float-right login_btn">
                     </div>
                   </form>
+                  {% if error %}
+                    <strong class="text-danger">{{ error }}</strong>
+                  {% endif %}
                 </div>
                 <div class="card-footer">
                   <div class="d-flex justify-content-center links">
