--- a/templates/_formhelpers.html
+++ b/templates/_formhelpers.html
@@ -5,7 +5,7 @@
   {% if field.errors %}
   <ul class = errors>
     {% for error in field.errors %}
-    <li>{{ error }}</li>
+    <li class="text-white">{{ error }}</li>
     {% endfor %}
   </ul>
   {% endif %}
