--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <!-- <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.80.0"> -->
-  <title>Carousel Template · Bootstrap v5.0</title>
+  <title>Book Review</title>
 
   <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/carousel/">
 
@@ -125,11 +125,13 @@
       <!-- START THE FEATURETTES -->
 
       <hr class="featurette-divider">
+      <!-- Book titles + images + books features -->
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Book title here</h2>
+          <h2 class="featurette-heading">The Help</h2>
           <p class="lead">Book features here</p>
+          <p>Book description</p>
         </div>
 
         <div class="col-md-4">
