--- a/templates/_formhelpers.html
+++ b/templates/_formhelpers.html
@@ -1,11 +1,26 @@
 {% macro render_field(field) %}
 
-  <dt class="text-white">{{ field.label }}
+<dt class="text-white">{{ field.label }}
   <dd>{{ field(**kwargs) | safe }}
   {% if field.errors %}
   <ul class = errors>
     {% for error in field.errors %}
     <li class="text-white">{{ error }}</li>
+    {% endfor %}
+  </ul>
+  {% endif %}
+  </dd>
+
+{% endmacro %}
+
+{% macro render_field_black(field) %}
+
+<dt class="text-black">{{ field.label }}
+  <dd>{{ field(**kwargs) | safe }}
+  {% if field.errors %}
+  <ul class = errors>
+    {% for error in field.errors %}
+    <li class="text-black">{{ error }}</li>
     {% endfor %}
   </ul>
   {% endif %}
