--- a/templates/change_passwd.html
+++ b/templates/change_passwd.html
@@ -1,96 +1,39 @@
-<!doctype html>
-<html lang="en">
+{% extends 'dashboard_base.html' %}
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <!-- <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Hugo 0.80.0"> -->
-    <title>Book Review</title>
+{% block head %}
+<title>Change password</title>
+{% endblock %}
 
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/carousel/">
+{% block body %}
+<!-- <br>
+<br>
+<br> -->
+<div class="container marketing" style="padding-top:150px">
 
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <!-- Favicons -->
-    <meta name="theme-color" content="#7952b3">
-
-    <!-- Custom styles for this template -->
-    <link href="../static/css/carousel.css" rel="stylesheet">
-</head>
-
-<body>
-
-    <header>
-        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">Book Review</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-                <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/dashboard">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/dashboard/change_passwd">Change password</a>
-                        </li>
-                    </ul>
-                    <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
-                </div>
-            </div>
-        </nav>
-    </header>
-
-    <main>
-
-        <div id="myCarousel" class="carousel slide" data-bs-ride="carousel"></div>
-
-        <!-- Marketing messaging and featurettes
-  ================================================== -->
-        <!-- Wrap the rest of the page in another container to center all the content. -->
-
-        <div class="container marketing">
-
-            <!-- Three columns of text below the carousel -->
-            <div class="row">
-                <div class="text-center">
-                    <img src="../static/images/piglet.jpg" alt="Pig" width="140" height="140" class="rounded-circle">
-                    <h2>Change password for {{ first_name }}</h2>
-                    {% from '_formhelpers.html' import render_field_black %}
-                    <form autocomplete="off" action="/dashboard/change_passwd" method="POST">
-                        <dl>
-                            {{render_field_black(form.old_password)}} {{render_field_black(form.new_password)}} {{render_field_black(form.confirm)}}
-                        </dl>
-                        <br>
-                        <p><input type="submit" value="Submit"></p>
-                    </form>
-                    {% if error %}
-                    <strong class="text-danger">{{ error }}</strong> {% endif %}
-                </div>
-            </div>
-            <!-- /.row -->
+  <!-- Three columns of text below the carousel -->
+  <div class="row">
+    <div class="text-center">
+      <img src="../static/images/piglet.jpg" alt="Pig" width="140" height="140" class="rounded-circle">
+      <h2>Change password for {{ first_name }}</h2>
+      {% from '_formhelpers.html' import render_field_black %}
+      <form autocomplete="off" action="/dashboard/change_passwd" method="POST">
+        <dl>
+          {{render_field_black(form.old_password)}} {{render_field_black(form.new_password)}} {{render_field_black(form.confirm)}}
+        </dl>
+        <br>
+        <p><input type="submit" value="Submit"></p>
+      </form>
+      {% if error %}
+        <strong class="text-danger">{{ error }}</strong> {% endif %}
+    </div>
+  </div>
+  <!-- /.row -->
 
 
 
 
-        </div>
-        <!-- /.container -->
+</div>
+<!-- /.container -->
 
-    </main>
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
-
-</body>
-
-</html>
+<!-- </main> -->
+{% endblock %}
