--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -70,6 +70,9 @@
     <div class="row">
       <div class="text-center">
         <img src="static/images/{{ pic_name }}" alt="Pig" width="140" height="140" class="rounded-circle">
+        <br><br>
+        <a class="btn btn-primary" href="/dashboard/change_pic" role="button">Change your profile picture</a>
+        <br>
         <h2>Welcome back {{ first_name }}</h2>
         <p>Another exciting bit of representative placeholder content</p>
         <p>I'm a piglet.</p>
