--- a/templates/_formhelpers.html
+++ b/templates/_formhelpers.html
@@ -27,3 +27,18 @@
   </dd>
 
 {% endmacro %}
+
+{% macro render_field_photo(field) %}
+
+<dt class="text-black">{{ field.label }}
+  <dd>{{ field(**kwargs) | safe }}
+  {% if field.errors %}
+  <ul class = errors>
+    {% for error in field.errors %}
+    <li class="text-black">{{ error }}</li>
+    {% endfor %}
+  </ul>
+  {% endif %}
+  </dd>
+
+{% endmacro %}
