--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -81,21 +81,19 @@
     <!-- /.row -->
 
 
-    <!-- START THE FEATURETTES -->
+    <ol>
+    <!-- loop start here -->
+    {%for i in range(0,3)%}
 
+    <!-- START THE FEATURETTES -->
     <hr class="featurette-divider">
     <!-- Book titles + images + books features -->
-
     <div class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading"> Starting Out with C++: Early Objects(10th Edition)</h2>
-        <p class="lead">Tony Gaddis, Judy Walters, and Godfrey Muganda</p>
-        <p> Starting Out with C++: Early Objects introduces the fundamentals of C++ programming in clear and easy-to-understand language, making it accessible to novice programming students as well as those who have worked with different
-          languages.
-          The text is designed for use in two- and three-term C++ programming sequences, as well as in accelerated one-term programs. Its wealth of real-world examples encourages students to think about when, why, and how to apply the features
-          and constructs of C++. </p>
+        <h2 class="featurette-heading"> {{Booktitles[i]}}</h2>
+        <p class="lead">{{Bookauthors[i]}}</p>
+        <p> {{Bookdescriptions[i]}}</p>
       </div>
-
       <div class="col-md-4">
         <a href="#"><img src="static/images/Starting Out withh C++ Early Objects 10th Edition.jpeg" alt="Jumping" width="400" height="500" class="rounded mx-auto d-block"></a>
       </div>
