--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -98,8 +98,9 @@
         <a href="#"><img src="static/images/Starting Out withh C++ Early Objects 10th Edition.jpeg" alt="Jumping" width="400" height="500" class="rounded mx-auto d-block"></a>
       </div>
     </div>
+    </ol>
 
-    <hr class="featurette-divider">
+    {% comment %} <hr class="featurette-divider">
 
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
@@ -129,7 +130,7 @@
       </div>
     </div>
 
-    <hr class="featurette-divider">
+    <hr class="featurette-divider"> {% endcomment %}
 
     <!-- /END THE FEATURETTES -->
 
