--- a/templates/view_book.html
+++ b/templates/view_book.html
@@ -20,10 +20,39 @@
       </div>
     </div>
     <hr>
-    <div class="form-group">
-    <label for="exampleFormControlTextarea1">Comments</label>
-    <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Write a comment..." rows="3"></textarea>
-  </div>
+
+    <!-- <hr class="featurette-divider"> -->
+      {% for comment in comment %}
+        <div class="container">
+            <div class="row justify-content-between">
+                <div class="col-auto">
+                    <small class="text-muted">Date Posted: {{ comment[1] }}</small><br>
+                    <small class="text-muted">By: <i>{{ comment[3] }}</i></small>
+                </div>
+            </div>
+            <div class="row">
+                <p class="lead"><small>{{ comment[2] }}</small></p>
+            </div>
+              {% if username == comment[3] %}
+                <a class="btn btn-danger btn-sm" href='/dashboard/delete/{{ comment[0] }}'>Delete</a>
+                <a class="btn btn-primary btn-sm" href='#'>Edit</a>
+              {% endif %}
+        </div>
+        <hr>
+      {% endfor %}
+
+    <form action="/dashboard/books/{{ data[0] }}" method="POST">
+      <div class="form-group">
+      <label for="exampleFormControlTextarea1">Comments</label>
+      <textarea class="form-control" id="exampleFormControlTextarea1" name="comment" placeholder="Write a comment..." rows="3"></textarea>
+      <div class="row justify-content-between pt-3">
+          <div class="col-auto"></div>
+          <div class="col-auto">
+              <input type="submit" class="btn btn-primary" value="Submit">
+          </div>
+      </div>
+    </div>
+    </form>
   </div>
 </main>
 
