--- a/templates/view_book.html
+++ b/templates/view_book.html
@@ -1,127 +1,10 @@
 {% extends 'dashboard_base.html' %} {% block head %}
-<title>View and Comment Books</title>
+<title>Search Result</title>
 {% endblock %} {% block body %}
 <main>
-    <div class="container marketing" style="padding-top:100px">
-        <hr class="featurette-divider">
-        <!-- Book titles + images + books features -->
-        <div class="row featurette">
-            <div class="col-md-7">
-                <h2 class="featurette-heading"> {{ data[1] }}</h2>
-                <p class="lead">{{ data[3] }}</p>
-                <p> {{ data[2] }}</p>
-                <small><a href="{{ data[5] }}" target="_blank">Click here</a> to purchase this book</small>
-            </div>
-            <div class="col-md-4">
-                <img src="/static/images/{{ data[6] }}" alt="Jumping" width="400" height="500" class="rounded mx-auto d-block">
-            </div>
-        </div>
-        <hr>
+    
 
-        <!-- <hr class="featurette-divider"> -->
-        {% for comment in comment %}
-        <div class="container">
-            <div class="row justify-content-between">
-                <div class="col-auto">
-                    <small class="text-muted">Date Posted: {{ comment[1] }}</small><br>
-                    <small class="text-muted">By: <i>{{ comment[3] }}</i></small><br>
-                    {% for rating in rating %} 
-                      {% if rating[1] == comment[3] %}
-                        <small class="text-muted">Rating: <i>{{ rating[0] }}</i></small>
-                      {% endif %}
-                    {% endfor %}
-                </div>
-            </div>
-            <div class="row">
-                <p class="lead"><small>{{ comment[2] }}</small></p>
-            </div>
-            {% if username == comment[3] %}
-            <a class="btn btn-danger btn-sm" href='/dashboard/delete/{{ comment[0] }}'>Delete</a>
-            <a class="btn btn-primary btn-sm" href='/dashboard/edit/{{ comment[0] }}'>Edit</a> {% endif %}
-        </div>
-        <hr> {% endfor %}
-
-        <!-- <form action="/dashboard/books/{{ data[0] }}" method="POST">
-      <div class="form-group">
-      <label for="exampleFormControlTextarea1">Comments</label>
-      <textarea class="form-control" id="exampleFormControlTextarea1" name="comment" placeholder="Write a comment..." rows="3"></textarea>
-      <div class="row justify-content-between pt-3">
-          <div class="col-auto"></div>
-          <div class="col-auto">
-              <input type="submit" class="btn btn-primary" value="Submit">
-          </div>
-      </div>
-    </div>
-    </form> -->
-        <!-- Comment form -->
-        <form action="/dashboard/books/{{ data[0] }}" method="POST">
-            <div class="form-group">
-                <div class="row justify-content-between pb-2">
-                    <div class="col-auto">
-                        <label for="coment">Comments</label>
-                    </div>
-                    <div class="col-auto">
-                        <div class="row">
-                            <div class="col-auto">
-                                <label for="coment">Rating</label>
-                            </div>
-                            <style>
-                                .stars:not(:checked)>input {
-                                    position: absolute;
-                                    clip: rect(0, 0, 0, 0);
-                                }
-                                
-                                .stars:not(:checked)>label {
-                                    float: right;
-                                    width: 0.9em;
-                                    overflow: hidden;
-                                    cursor: pointer;
-                                    color: lightgrey;
-                                }
-                                
-                                .stars:not(:checked)>label:before {
-                                    content: "★";
-                                }
-                                
-                                .stars>input:checked~label {
-                                    color: gold;
-                                }
-                                
-                                .stars:not(:checked)>label:hover,
-                                .stars:not(:checked)>label:hover~label {
-                                    color: gold;
-                                }
-                                
-                                .stars>input:checked+label:hover,
-                                .stars>input:checked+label:hover~label,
-                                .stars>input:checked~label:hover,
-                                .stars>input:checked~label:hover~label,
-                                .stars>label:hover~input:checked~label {
-                                    color: gold;
-                                }
-                            </style>
-                            <div class="col-auto">
-                                <ul class="stars">
-                                    <input type="radio" id="5-star" name="rating" value="5" /><label for="5-star">5</label>
-                                    <input type="radio" id="4-star" name="rating" value="4" /><label for="4-star">4</label>
-                                    <input type="radio" id="3-star" name="rating" value="3" /><label for="3-star">3</label>
-                                    <input type="radio" id="2-star" name="rating" value="2" /><label for="2-star">2</label>
-                                    <input type="radio" id="1-star" name="rating" value="1" /><label for="1-star">1</label>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <textarea class="form-control" id="comment" name="comment" placeholder="Write a comment..." rows="3"></textarea>
-                <div class="row justify-content-between pt-3">
-                    <div class="col-auto"></div>
-                    <div class="col-auto">
-                        <input type="submit" class="btn btn-primary" value="Submit">
-                    </div>
-                </div>
-            </div>
-        </form>
-    </div>
+    
 </main>
 
 {% endblock %}
