--- a/templates/dashboard_base.html
+++ b/templates/dashboard_base.html
@@ -42,8 +42,8 @@
               <a class="nav-link active" href="/logout">Log out</a>
             </li>
           </ul>
-          <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <form class="d-flex" action="/result" method="POST">
+            <input class="form-control me-2" type="search" placeholder="Search" id="search" name="search" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Search</button>
           </form>
         </div>
