--- a/templates/result.html
+++ b/templates/result.html
@@ -4,6 +4,9 @@
 <main>
     <div class="container marketing" style="padding-top:100px">
         <h1>Search result</h1>
+        {% if not result %}
+          <h3 class="text-center"><em>Not found</em></h3>
+        {% endif %}
         {% for result in results %}
              <hr class="featurette-divider">
         <!-- Book titles + images + books features -->
