--- a/templates/change_passwd.html
+++ b/templates/change_passwd.html
@@ -13,7 +13,7 @@
   <!-- Three columns of text below the carousel -->
   <div class="row">
     <div class="text-center">
-      <img src="/static/images/{{ pic_name }}" alt="Pig" width="140" height="140" class="rounded-circle">
+      <img src="/static/images/users/{{ pic_name }}" alt="Pig" width="140" height="140" class="rounded-circle">
       <h2>Change password for {{ first_name }}</h2>
       {% from '_formhelpers.html' import render_field_black %}
       <form autocomplete="off" action="/dashboard/change_passwd" method="POST">
