--- a/templates/change_pic.html
+++ b/templates/change_pic.html
@@ -11,7 +11,7 @@
 <div class="container marketing" style="padding-top:150px">
   <div class="row">
     <div class="text-center">
-      <img src="/static/images/{{ pic_name }}" alt="Pig" width="140" height="140" class="rounded-circle">
+      <img src="/static/images/users/{{ pic_name }}" alt="Pig" width="140" height="140" class="rounded-circle">
       <h2>Change profile picture for {{ first_name }}</h2>
       <div class="form-group">
         <form autocomplete="off" action="/dashboard/change_pic" enctype="multipart/form-data" method="POST">
