--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,77 +5,19 @@
 
 {% block body %}
 <main>
-  <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="static/images/testt.jpg" alt="Jumping" width="100%" height="100%">
-        <div class="container">
-          <div class="carousel-caption text-start">
-            <h1>Example headline.</h1>
-            <p>Add cover page(1).</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Cover 1</a></p>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-          <rect width="100%" height="100%" fill="#777" />
-        </svg>
-
-        <div class="container">
-          <div class="carousel-caption">
-            <h1>Example headline.</h1>
-            <p>Add cover page(2).</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Cover 2</a></p>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-          <rect width="100%" height="100%" fill="#777" />
-        </svg>
-
-        <div class="container">
-          <div class="carousel-caption text-end">
-            <h1>Example headline.</h1>
-            <p>Add cover page(3).</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Cover 3</a></p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
-
-
   <!-- Marketing messaging and featurettes
   ================================================== -->
   <!-- Wrap the rest of the page in another container to center all the content. -->
 
-  <div class="container marketing">
+  <div class="container marketing" style="padding-top:150px">
 
     <!-- Three columns of text below the carousel -->
     <div class="row">
       <div class="text-center">
-        <img src="/static/images/{{ pic_name }}" alt="Pig" width="140" height="140" class="rounded-circle">
+        <img src="/static/images/users/{{ pic_name }}" alt="Pig" width="140" height="140" class="rounded-circle">
         <br><br>
-        <a class="btn btn-primary" href="/dashboard/change_pic" role="button">Change your profile picture</a>
         <br>
-        <h2>Welcome back {{ first_name }}</h2>
-        <p>Another exciting bit of representative placeholder content</p>
-        <p>I'm a piglet.</p>
+        <h2>Welcome back {{ first_name }}!</h2>
       </div>
     </div>
     <!-- /.row -->
