--- a/templates/dashboard_base.html
+++ b/templates/dashboard_base.html
@@ -39,6 +39,9 @@
               <a class="nav-link active" href="/dashboard/change_passwd">Change password</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link active" href="/dashboard/change_pic">Change picture</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link active" href="/logout">Log out</a>
             </li>
           </ul>
