--- a/templates/home.html
+++ b/templates/home.html
@@ -31,7 +31,7 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="text-container">
-            <h1>Library Database</h1>
+            <h1>Book Review</h1>
             <p class="p-heading p-large">For new users - Register an account to use this app</p>
             <p class="p-heading p-large">For existing users - Sign on</p>
             <a class="btn-solid-lg page-scroll" href="/register">REGISTER</a>
