--- a/templates/login.html
+++ b/templates/login.html
@@ -45,7 +45,7 @@
                     Don't have an account?<a href="/register">Sign Up</a>
                   </div>
                   <div class="d-flex justify-content-center">
-                    <a href="#">Forgot your password?</a>
+                    <a href="/">Back to home page</a>
                   </div>
                 </div>
               </div>
