Added init.py and config.py

--- a/templates/result.html
+++ b/templates/result.html
@@ -4,7 +4,7 @@
 <main>
     <div class="container marketing" style="padding-top:100px">
         <h1>Search result</h1>
-        {% if not result %}
+        {% if not found %}
           <h3 class="text-center"><em>Not found</em></h3>
         {% endif %}
         {% for result in results %}
